# middlewares/route.mdw.js
@@ -4,8 +4,12 @@ const __dirname = dirname(fileURLToPath(import.meta.url));
 
 import authRoute from "../routes/auth.route.js";
 import userRoute from "../routes/users.route.js";
+import productRoute from "../routes/product.route.js";
+import orderRoute from "../routes/order.route.js";
 
 export default function (app) {
-  app.use("/api/users", userRoute);
+  app.use("/api/admin", userRoute);
   app.use("/api/auth", authRoute);
+  app.use("/api/product", productRoute);
+  app.use("/api/order",orderRoute);
 }
