# routes/auth.route.js
@@ -1,14 +1,13 @@
-import bcrypt from "bcrypt";
-
 import router from "./users.route.js";
 import { jwtTokens } from "../utils/jwt-heplers.js";
 import model from "../provider/users.model.js";
 import jwt from "jsonwebtoken";
+
 router.post("/login", async (req, res) => {
   try {
-    const { email, password } = req.body;
-    const users = await model.findUserByEmail(email);
-    
+    const { login_name, password } = req.body;
+    const users = await model.findUserByUsername(login_name);
+
     /*	#swagger.parameters['body'] = {
             in: 'body',
             description: 'Provide email and password to get access tokens and refresh tokens',
@@ -16,20 +15,26 @@ router.post("/login", async (req, res) => {
             
     } */
   
-    if (users.length === 0) {
+    if (!users) {
       return res.status(401).json({ error: "Email or password is incorrect" });
     }
-    const validPassword = await bcrypt.compare(password, users[0].password);
+    const validPassword = password === users.password;
     if (!validPassword)
       return res.status(401).json({ error: "Email or password is incorrect" });
-
-    const tokens = jwtTokens(users[0]);
+    let user = {
+      login_name,
+      id : users.id,
+      role_name : users.role_name,
+      address : users.address,
+    }
+    const tokens = jwtTokens(user);
   //  tokens.refreshToken = tokens.refreshToken.split(' ')[1];
     res.cookie("refresh_token", tokens.refreshToken, { httpOnly: true });
     res.json(tokens);
     return res.status(200).json("Success");
   } catch (error) {}
 });
+
 router.post("/refresh_token/:token", (req, res) => {
   // #swagger.description = 'Refresh access tokens'
   try {
